:new: sql res, index, env

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Start Page</title>
+        <title>Shed</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        <h1>Hello World!</h1>
+        <h1>Salutations</h1>
+        <a href="yo?name=mario">yo</a>
+        <a href="cheers?name=mario">cheers</a>
+        <a href="goodbye.jsp?name=mario">goodbyes</a>
+        <a href="sql">time of day</a>
     </body>
 </html>
