--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,6 +9,6 @@
         <a href="yo?name=mario">yo</a>
         <a href="cheers?name=mario">cheers</a>
         <a href="goodbye.jsp?name=mario">goodbyes</a>
-        <a href="sql">time of day</a>
+        <a href="stats">stats</a>
     </body>
 </html>
