--- a/minispring/src/main/webapp/index.html
+++ b/minispring/src/main/webapp/index.html
@@ -7,9 +7,9 @@
     <body>
         <h1>Miniurl - URL minifier</h1>
         <ul>
-            <li><a href="api/blacklist">list blacklist items</a></li>
-            <li><form action="api/blacklist" method="POST"><input type="text" name="domain"><button type="submit">Add to blacklist</button></form></li>
-            <li><form action="api/minify" method="POST"><input type="text" name="url"><button type="submit">Minify URL</button></form></li>
+            <li><a href="api/v1/blacklist">list blacklist items</a></li>
+            <li><form action="api/v1/blacklist" method="POST"><input type="text" name="domain"><button type="submit">Add to blacklist</button></form></li>
+            <li><form action="api/v1/minify" method="POST"><input type="text" name="url"><button type="submit">Minify URL</button></form></li>
         </ul>
     </body>
 </html>
