--- a/minispring/src/main/webapp/index.html
+++ b/minispring/src/main/webapp/index.html
@@ -107,14 +107,16 @@
                     </div>
                 </div>
             </section>
-
+            <footer>
+                <abbr title="Hypertext Markup Language">HTML</abbr> example kindly provided by <a href="http://optionfactory.net">OptionFactory</a>
+            </footer>
         </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.js"></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
         <script src="index.js"></script>
         <script>
-minispring.init();
+            minispring.init();
         </script>
     </body>
 </html>
