:ref: package redistribution

--- a/minispring/src/main/webapp/index.html
+++ b/minispring/src/main/webapp/index.html
@@ -94,7 +94,7 @@
                         <form action="api/v1/blacklist" method="POST">
                             <div class="form-group">
                                 <label for="domain-input">Domain:</label>
-                                <input id="domain-input" type="text" name="domain" class="form-control" placeholder="franzoni.eu">
+                                <input id="domain-input" type="text" name="domain" class="form-control" placeholder="google.com">
                             </div>
                             <div class="form-group">
                                 <label for="reason-input">Reason:</label>
